AP-2007-10-31-0: Bugfix:      o Oracle, Postgres DWB should prompt for tablespace 
                              where indexes and tables should be created
                              o recompile views dependend on altered tables
                 Bugster:     6565821
                 Issue:       2283
                 Review:      JO

AP-2007-10-31-0: Bugfix:      o Oracle, Postgres DWB should prompt for tablespace 
                              where indexes and tables should be created
                              o recompile views dependend on altered tables
                 Bugster:     6565821
                 Issue:       2283
                 Review:      JO

JO-2007-10-24-0: Bugfix:      ARCO view_accounting filters out parallel job usage incorrectly
                 Bugster:     6620930
                 Issue:       2415
                 Review:      AP

JO-2007-10-23-0: Bugfix:      o Returned method commit and rollback in Database class to previous state,
                                state where they are not checking if connection is closed
                              o removed some unnecessary logs

JO-2007-08-24-0: Refactoring: Class, method name changes, new package
                 Review:      JG

RD-2007-07-30-0: CVS          Created V61u2_TAG

-----------------------------------------------
JO-2007-07-30-0: Bugfix:      Changed DB_VERSION in DBWriterTestConfig.properties

RD-2007-07-30-0: CVS          Created V61u1_TAG
-----------------------------------------------

JO-2007-07-17-0: Bugfix:      fixed a small typo introduced in previous commit

JO-2007-07-01-0: Bugfix:      Oracle: rollback segments keep filling up, Postgres: delete query keeps running
                 Bugster:     6565841
                 Issue:       2284
                 Bugfix:      sge_queue_values definition does not contain PRIMARY KEY
                 Bugster:     6572801
                 Issue:       2309