@@ -1107,9 +1107,119 @@
    </version> 
    
    <!-- ======================================================================= -->
-   <!-- bugid 6620930 - ARCO view_accounting filters out parallel job usage incorrectly -->
       
-   <version id="6" name="6.1u3">  
+   <version id="6" name="6.1u3">
+      <!-- CR 6618599 - Long running jobs cause incorrect usage summary from ARCo database
+           The old incorrect records need to be corrected -->
+           
+      <item>
+         <description>
+            Create view view_fixed_stimes - view containing the correct start_times 
+            for the intermediate line.
+        </description>
+        <sql>
+            CREATE VIEW view_fixed_stimes AS SELECT
+               u1.ju_parent,
+               u1.ju_id,
+               coalesce(max(u2.ju_end_time), u1.ju_start_time) AS fstart_time,
+               u1.ju_end_time
+            FROM
+               sge_job_usage u1
+               LEFT OUTER JOIN sge_job_usage u2
+                  ON u2.ju_parent = u1.ju_parent
+                  AND u2.ju_end_time < u1.ju_end_time
+            GROUP BY
+               u1.ju_parent,
+               u1.ju_id,
+               u1.ju_start_time,
+               u1.ju_end_time
+            ORDER BY
+               u1.ju_parent,
+               u1.ju_id
+        </sql>
+      </item>
+      <item>
+         <description>
+            Update sge_job_usage with the correct ju_start_time values for
+            intermediate lines
+         </description>
+         <sql>
+            UPDATE sge_job_usage n SET
+               ju_start_time = (
+                  SELECT 
+                     fstart_time 
+                  FROM 
+                     view_fixed_stimes f 
+                  WHERE 
+                     f.ju_id = n.ju_id
+                  )
+         </sql>            
+      </item>
+      <item>
+         <desription>
+            Create view view_fixed_usages - view containing the correct usages 
+            (ju_cpu, ju_mem, ju_io, ju_iow) for the intermediate line.
+         </desription>
+         <sql>
+            CREATE VIEW view_fixed_usages AS SELECT
+               u1.ju_parent,
+               u1.ju_id,
+               2*max(u2.ju_cpu) - sum(u2.ju_cpu) as ju_cpu,
+               2*max(u2.ju_mem) - sum(u2.ju_mem) as ju_mem, 
+               2*max(u2.ju_io) - sum(u2.ju_io) as ju_io, 
+               2*max(u2.ju_iow) - sum(u2.ju_iow) as ju_iow
+            FROM
+               sge_job_usage u1
+               LEFT OUTER JOIN sge_job_usage u2
+                  ON u2.ju_parent = u1.ju_parent
+            GROUP BY
+               u1.ju_parent,
+               u1.ju_id,
+               u1.ju_cpu,
+               u1.ju_mem,
+               u1.ju_io,
+               u1.ju_iow
+            HAVING
+               u1.ju_cpu = max(u2.ju_cpu)
+            ORDER BY
+               u1.ju_parent,
+               u1.ju_id
+         </sql>
+      </item>
+      <item>
+         <description>
+            Update sge_job_usage with the correct ju_cpu, ju_mem, ju_io, ju_iow 
+            values for the intermediate line
+         </description>
+         <sql>
+            UPDATE sge_job_usage n SET
+            (ju_cpu, ju_mem, ju_io, ju_iow) = (
+               SELECT 
+                  ju_cpu, 
+                  ju_mem, 
+                  ju_io, 
+                  ju_iow 
+               FROM
+                  view_fixed_usage f 
+               WHERE 
+                  n.ju_id = f.ju_id
+               )
+         </sql>
+      </item>
+      <item>
+         <description>Drop view view_fixed_stimes</description>
+         <sql>
+            DROP VIEW view_fixed_stimes
+         </sql>
+      </item>      
+      <item>
+         <description>Drop view view_fixed_usages</description>
+         <sql>
+            DROP VIEW view_fixed_usages
+         </sql>
+      </item>     
+      
+      <!-- CR 6620930 - ARCO view_accounting filters out parallel job usage incorrectly -->
       <item>
          <description>Drop view view_job_times</description>
          <sql>
